# serializer version: 1
# name: test_numbers[color_temperature_light][number.mock_color_temperature_light_on_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_color_temperature_light_on_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On level',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_level',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-on_level-8-17',
    'unit_of_measurement': None,
  })
# ---
# name: test_numbers[color_temperature_light][number.mock_color_temperature_light_on_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Color Temperature Light On level',
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_color_temperature_light_on_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '255',
  })
# ---
# name: test_numbers[dimmable_light][number.mock_dimmable_light_off_transition_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_dimmable_light_off_transition_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Off transition time',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'off_transition_time',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-off_transition_time-8-19',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_numbers[dimmable_light][number.mock_dimmable_light_off_transition_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Dimmable Light Off transition time',
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_dimmable_light_off_transition_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_numbers[dimmable_light][number.mock_dimmable_light_on_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_dimmable_light_on_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On level',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_level',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-on_level-8-17',
    'unit_of_measurement': None,
  })
# ---
# name: test_numbers[dimmable_light][number.mock_dimmable_light_on_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Dimmable Light On level',
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_dimmable_light_on_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '255',
  })
# ---
# name: test_numbers[dimmable_light][number.mock_dimmable_light_on_off_transition_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_dimmable_light_on_off_transition_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On/Off transition time',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_off_transition_time',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-on_off_transition_time-8-16',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_numbers[dimmable_light][number.mock_dimmable_light_on_off_transition_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Dimmable Light On/Off transition time',
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_dimmable_light_on_off_transition_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_numbers[dimmable_light][number.mock_dimmable_light_on_transition_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_dimmable_light_on_transition_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On transition time',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_transition_time',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-on_transition_time-8-18',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_numbers[dimmable_light][number.mock_dimmable_light_on_transition_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Dimmable Light On transition time',
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_dimmable_light_on_transition_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_numbers[dimmable_plugin_unit][number.dimmable_plugin_unit_on_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.dimmable_plugin_unit_on_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On level',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_level',
    'unique_id': '00000000000004D2-0000000000000024-MatterNodeDevice-1-on_level-8-17',
    'unit_of_measurement': None,
  })
# ---
# name: test_numbers[dimmable_plugin_unit][number.dimmable_plugin_unit_on_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Dimmable Plugin Unit On level',
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.dimmable_plugin_unit_on_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '255',
  })
# ---
# name: test_numbers[dimmable_plugin_unit][number.dimmable_plugin_unit_on_off_transition_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.dimmable_plugin_unit_on_off_transition_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On/Off transition time',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_off_transition_time',
    'unique_id': '00000000000004D2-0000000000000024-MatterNodeDevice-1-on_off_transition_time-8-16',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_numbers[dimmable_plugin_unit][number.dimmable_plugin_unit_on_off_transition_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Dimmable Plugin Unit On/Off transition time',
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.dimmable_plugin_unit_on_off_transition_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.0',
  })
# ---
# name: test_numbers[door_lock][number.mock_door_lock_automatic_relock_timer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_door_lock_automatic_relock_timer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Automatic relock timer',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'auto_relock_timer',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-AutoRelockTimer-257-35',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_numbers[door_lock][number.mock_door_lock_automatic_relock_timer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Door Lock Automatic relock timer',
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1.0,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_door_lock_automatic_relock_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '60',
  })
# ---
# name: test_numbers[door_lock_with_unbolt][number.mock_door_lock_automatic_relock_timer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_door_lock_automatic_relock_timer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Automatic relock timer',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'auto_relock_timer',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-AutoRelockTimer-257-35',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_numbers[door_lock_with_unbolt][number.mock_door_lock_automatic_relock_timer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Door Lock Automatic relock timer',
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1.0,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_door_lock_automatic_relock_timer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '60',
  })
# ---
# name: test_numbers[eve_thermo][number.eve_thermo_temperature_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 50,
      'min': -50,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.eve_thermo_temperature_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature offset',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_offset',
    'unique_id': '00000000000004D2-0000000000000021-MatterNodeDevice-1-EveTemperatureOffset-513-16',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_numbers[eve_thermo][number.eve_thermo_temperature_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'Eve Thermo Temperature offset',
      'max': 50,
      'min': -50,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.5,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.eve_thermo_temperature_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_numbers[eve_weather_sensor][number.eve_weather_altitude_above_sea_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 9000,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.eve_weather_altitude_above_sea_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.DISTANCE: 'distance'>,
    'original_icon': None,
    'original_name': 'Altitude above sea level',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'altitude',
    'unique_id': '00000000000004D2-000000000000001D-MatterNodeDevice-1-EveWeatherAltitude-319486977-319422483',
    'unit_of_measurement': <UnitOfLength.METERS: 'm'>,
  })
# ---
# name: test_numbers[eve_weather_sensor][number.eve_weather_altitude_above_sea_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'distance',
      'friendly_name': 'Eve Weather Altitude above sea level',
      'max': 9000,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
      'unit_of_measurement': <UnitOfLength.METERS: 'm'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.eve_weather_altitude_above_sea_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '40.0',
  })
# ---
# name: test_numbers[extended_color_light][number.mock_extended_color_light_on_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_extended_color_light_on_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On level',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_level',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-on_level-8-17',
    'unit_of_measurement': None,
  })
# ---
# name: test_numbers[extended_color_light][number.mock_extended_color_light_on_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Extended Color Light On level',
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_extended_color_light_on_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '255',
  })
# ---
# name: test_numbers[mounted_dimmable_load_control_fixture][number.mock_mounted_dimmable_load_control_on_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_mounted_dimmable_load_control_on_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On level',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_level',
    'unique_id': '00000000000004D2-000000000000000E-MatterNodeDevice-1-on_level-8-17',
    'unit_of_measurement': None,
  })
# ---
# name: test_numbers[mounted_dimmable_load_control_fixture][number.mock_mounted_dimmable_load_control_on_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Mounted dimmable load control On level',
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_mounted_dimmable_load_control_on_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_numbers[multi_endpoint_light][number.inovelli_off_transition_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.inovelli_off_transition_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Off transition time',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'off_transition_time',
    'unique_id': '00000000000004D2-00000000000000C5-MatterNodeDevice-1-off_transition_time-8-19',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_numbers[multi_endpoint_light][number.inovelli_off_transition_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Inovelli Off transition time',
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.inovelli_off_transition_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.5',
  })
# ---
# name: test_numbers[multi_endpoint_light][number.inovelli_on_level_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.inovelli_on_level_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On level (1)',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_level',
    'unique_id': '00000000000004D2-00000000000000C5-MatterNodeDevice-1-on_level-8-17',
    'unit_of_measurement': None,
  })
# ---
# name: test_numbers[multi_endpoint_light][number.inovelli_on_level_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Inovelli On level (1)',
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.inovelli_on_level_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '137',
  })
# ---
# name: test_numbers[multi_endpoint_light][number.inovelli_on_level_6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.inovelli_on_level_6',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On level (6)',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_level',
    'unique_id': '00000000000004D2-00000000000000C5-MatterNodeDevice-6-on_level-8-17',
    'unit_of_measurement': None,
  })
# ---
# name: test_numbers[multi_endpoint_light][number.inovelli_on_level_6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Inovelli On level (6)',
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.inovelli_on_level_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '254',
  })
# ---
# name: test_numbers[multi_endpoint_light][number.inovelli_on_off_transition_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.inovelli_on_off_transition_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On/Off transition time',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_off_transition_time',
    'unique_id': '00000000000004D2-00000000000000C5-MatterNodeDevice-1-on_off_transition_time-8-16',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_numbers[multi_endpoint_light][number.inovelli_on_off_transition_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Inovelli On/Off transition time',
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.inovelli_on_off_transition_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.5',
  })
# ---
# name: test_numbers[multi_endpoint_light][number.inovelli_on_transition_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.inovelli_on_transition_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On transition time',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_transition_time',
    'unique_id': '00000000000004D2-00000000000000C5-MatterNodeDevice-1-on_transition_time-8-18',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_numbers[multi_endpoint_light][number.inovelli_on_transition_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Inovelli On transition time',
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.inovelli_on_transition_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.5',
  })
# ---
# name: test_numbers[on_off_plugin_unit][number.mock_onoffpluginunit_off_transition_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_onoffpluginunit_off_transition_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Off transition time',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'off_transition_time',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-off_transition_time-8-19',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_numbers[on_off_plugin_unit][number.mock_onoffpluginunit_off_transition_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock OnOffPluginUnit Off transition time',
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_onoffpluginunit_off_transition_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_numbers[on_off_plugin_unit][number.mock_onoffpluginunit_on_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_onoffpluginunit_on_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On level',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_level',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-on_level-8-17',
    'unit_of_measurement': None,
  })
# ---
# name: test_numbers[on_off_plugin_unit][number.mock_onoffpluginunit_on_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock OnOffPluginUnit On level',
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_onoffpluginunit_on_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '255',
  })
# ---
# name: test_numbers[on_off_plugin_unit][number.mock_onoffpluginunit_on_off_transition_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_onoffpluginunit_on_off_transition_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On/Off transition time',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_off_transition_time',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-on_off_transition_time-8-16',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_numbers[on_off_plugin_unit][number.mock_onoffpluginunit_on_off_transition_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock OnOffPluginUnit On/Off transition time',
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_onoffpluginunit_on_off_transition_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_numbers[on_off_plugin_unit][number.mock_onoffpluginunit_on_transition_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_onoffpluginunit_on_transition_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On transition time',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_transition_time',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-on_transition_time-8-18',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_numbers[on_off_plugin_unit][number.mock_onoffpluginunit_on_transition_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock OnOffPluginUnit On transition time',
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_onoffpluginunit_on_transition_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_numbers[onoff_light_alt_name][number.mock_onoff_light_off_transition_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_onoff_light_off_transition_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Off transition time',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'off_transition_time',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-off_transition_time-8-19',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_numbers[onoff_light_alt_name][number.mock_onoff_light_off_transition_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock OnOff Light Off transition time',
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_onoff_light_off_transition_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_numbers[onoff_light_alt_name][number.mock_onoff_light_on_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_onoff_light_on_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On level',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_level',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-on_level-8-17',
    'unit_of_measurement': None,
  })
# ---
# name: test_numbers[onoff_light_alt_name][number.mock_onoff_light_on_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock OnOff Light On level',
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_onoff_light_on_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '255',
  })
# ---
# name: test_numbers[onoff_light_alt_name][number.mock_onoff_light_on_off_transition_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_onoff_light_on_off_transition_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On/Off transition time',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_off_transition_time',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-on_off_transition_time-8-16',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_numbers[onoff_light_alt_name][number.mock_onoff_light_on_off_transition_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock OnOff Light On/Off transition time',
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_onoff_light_on_off_transition_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_numbers[onoff_light_alt_name][number.mock_onoff_light_on_transition_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_onoff_light_on_transition_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On transition time',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_transition_time',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-on_transition_time-8-18',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_numbers[onoff_light_alt_name][number.mock_onoff_light_on_transition_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock OnOff Light On transition time',
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_onoff_light_on_transition_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_numbers[onoff_light_no_name][number.mock_light_off_transition_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_light_off_transition_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Off transition time',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'off_transition_time',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-off_transition_time-8-19',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_numbers[onoff_light_no_name][number.mock_light_off_transition_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Light Off transition time',
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_light_off_transition_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_numbers[onoff_light_no_name][number.mock_light_on_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_light_on_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On level',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_level',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-on_level-8-17',
    'unit_of_measurement': None,
  })
# ---
# name: test_numbers[onoff_light_no_name][number.mock_light_on_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Light On level',
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_light_on_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '255',
  })
# ---
# name: test_numbers[onoff_light_no_name][number.mock_light_on_off_transition_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_light_on_off_transition_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On/Off transition time',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_off_transition_time',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-on_off_transition_time-8-16',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_numbers[onoff_light_no_name][number.mock_light_on_off_transition_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Light On/Off transition time',
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_light_on_off_transition_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_numbers[onoff_light_no_name][number.mock_light_on_transition_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_light_on_transition_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On transition time',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_transition_time',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-on_transition_time-8-18',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_numbers[onoff_light_no_name][number.mock_light_on_transition_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Light On transition time',
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_light_on_transition_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_numbers[onoff_light_with_levelcontrol_present][number.d215s_on_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.d215s_on_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On level',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_level',
    'unique_id': '00000000000004D2-0000000000000008-MatterNodeDevice-1-on_level-8-17',
    'unit_of_measurement': None,
  })
# ---
# name: test_numbers[onoff_light_with_levelcontrol_present][number.d215s_on_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'D215S On level',
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.d215s_on_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '255',
  })
# ---
# name: test_numbers[onoff_light_with_levelcontrol_present][number.d215s_on_off_transition_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.d215s_on_off_transition_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On/Off transition time',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_off_transition_time',
    'unique_id': '00000000000004D2-0000000000000008-MatterNodeDevice-1-on_off_transition_time-8-16',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_numbers[onoff_light_with_levelcontrol_present][number.d215s_on_off_transition_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'D215S On/Off transition time',
      'max': 65534,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.1,
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.d215s_on_off_transition_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_numbers[pump][number.mock_pump_on_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.mock_pump_on_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On level',
    'platform': 'matter',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'on_level',
    'unique_id': '00000000000004D2-0000000000000003-MatterNodeDevice-1-on_level-8-17',
    'unit_of_measurement': None,
  })
# ---
# name: test_numbers[pump][number.mock_pump_on_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Pump On level',
      'max': 255,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_pump_on_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
